# music

./: .gitignore  404.html  Makefile  README.md  docker-compose.yml  dockerfile  index.html  install_sverchok.py  jsonToFbx.py  json_to_fbx.py  json_to_glb.py  list.html  pyproject.toml  setup.cfg  sunvox_frame.html  sunvox_load.js
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  glb_export.yml  integrate.yml
_next/data/-qcyar5aTnjpCY742Yfti/: index.json
_next/data/3Ri15a0AJj_fxI0N78d6D/: index.json
_next/data/5ZD0QCHOMNT2ijPISDDHt/: index.json
_next/data/BASfoacYAP6uOj7bVQNt6/: index.json
bpy/: Dockerfile  bake_animation.py  dockerfile  empty.blend  install_sverchok.py  json_to_glb.py  pyproject.toml  setup.cfg
bpy/.devcontainer/: devcontainer.json
glb/first/: blender.glb
glb/mechanical/: ellipese-draw.glb  ellipese-draw2.glb  gear.glb  internal-gear.glb
glb/misc/: 54.glb  practice.glb
mechanical/: ellipese-draw.json  gear.json  internal-gear.json  tmp_elliptical_draw.blend  tmp_elliptical_draw.blend1
models/: .gitignore.html
models/mechanical/: ellipese-draw.html  ellipese-draw2.html  gear.html  internal-gear.html
models/misc/: 54.html  practice.html
next/: .eslintrc.ts  constants.ts  eslintconfig.ts  next.config.js  package.json  tsconfig.json  window.d.ts
next/components/: model.tsx  nossr.tsx
next/pages/: _app.tsx  _document.tsx  index.tsx  list.tsx
sunvox/: readme.md
sverchok/mechanical/: ellipese-draw.json  ellipese-draw2.json  gear.json  internal-gear.json  tmp_elliptical_draw.blend
sverchok/misc/: a.json
(+81 files in other folders)
